--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
